--- a/Modulo-3/Tarea-02/css/estilos.css
+++ b/Modulo-3/Tarea-02/css/estilos.css
@@ -6,7 +6,7 @@
 
 body { 
     min-height: 100vh;
-    background-color: rgb(75, 74, 74);
+    background-color: rgb(20,20,20);
     font-family: 'Raleway', sans-serif;
 }
 
@@ -34,8 +34,9 @@ body {
 img{
     width: 184px;  
     height: 273px;  
-    margin-left: 30px;
-    margin-top: 25px;
+    align-items:center;
+    margin-right: 10px;
+    
 }
 span{
     color:white; font-size:28px;
@@ -65,19 +66,14 @@ form{
     margin-left: 10px; margin-right: 10px;
     
   }
-  button{
-      width: 200;
-  }
+  
   div#titulos{
     color:red;
 }
-  .card-title{
-      color:rgb(231, 35, 35);
+  div{
+      color:white;
   }
-  :root {
-    --grid-cols: 1;
-    --grid-rows: 1;
-  }
+  
   
   #supercontainer {
     display: grid;
@@ -86,17 +82,23 @@ form{
     grid-template-columns: repeat(var(--grid-cols), 1fr);
   }
   #container {
-      display: flex;
+      display: inline-block;
   }
   
-  .grid-item {
-    padding: 1em;
-    border: 1px solid #ddd;
-    text-align: center;
+  
+  div.card.m-5{
+      display: inline-block;
+      background-color:rgb(20,20,20);
+      text-align: center;
   }
- .covers {
-     display:flex;
-     align-items: center;
- }
+  div.card-body{
+      width: 200px;
+      margin: 0 auto;
+     
+  }
+  
+  button.btn.btn-primary{
+    background-color:rgb(56, 53, 53)
+  }
   
   
